@@ -1,14 +1,21 @@
 package com.example.demo;
 
+import org.springframework.stereotype.Repository;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-
+@Repository
 public class EmployeeRepository {
-    public List<Employee> employeeName() {
-        return List.of(new Employee("shai",
-                "Bharat"));
+       private List<Employee> employees= Arrays.asList(new Employee("shall"),new Employee("Bharat")) ;
+
+       /* return List.of(new Employee("shai",
+                "Bharat"));*/
+      public List<Employee> getAllEmployees()
+    {
+                  return employees;
     }
 
 }
